# agent-kanban

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTORS.md  Caddyfile.example  Cargo.toml  Dockerfile  README.md  local-build.sh  mobile-testing.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  refactor_test.md
.github/actions/cargo-checks-common-setup/: action.yml
.github/actions/setup-jsign/: action.yml
.github/actions/setup-node/: action.yml
.github/workflows/: pre-release.yml  publish.yml  relay-deploy-dev.yml  relay-deploy-prod.yml  relay-release.yml  remote-deploy-dev.yml  remote-deploy-prod.yml  remote-release.yml  test.yml
crates/api-types/: Cargo.toml
crates/api-types/src/: attachment.rs  auth.rs  blob.rs  export.rs  issue.rs  issue_assignee.rs  issue_follower.rs  issue_relationship.rs  issue_tag.rs  lib.rs  notification.rs  oauth.rs  pull_request.rs  relay.rs
crates/client-info/: Cargo.toml
crates/client-info/src/: lib.rs
crates/db/: Cargo.toml
crates/db/.sqlx/: query-04295271e91b2527849159663dec24a6f166418a5574ebae88d2e4fb49b54925.json  query-04f17449e3e12785affab91e4eab308103491e34c022199b7b060e04fa8aed0f.json  query-0ee24d51e7557d9d6c9418a06156c03d7dd49dfe938194cd6951942dfd8f179d.json  query-12a5c0a8b95d8cb87f1c869ff35692a2cee52bc418b06d00a31a4c139e12d18a.json  query-167c1d13ee37ebe62cd2316feaf6b5354eb26d0a8fc16efb22827a5cde59a60e.json  query-1af7a606a64d9662d6edc4fbeaae0d53a4d657a6e29b2561e820085a2d9e3348.json  (+44 more)
crates/db/src/: lib.rs
crates/deployment/: Cargo.toml
crates/deployment/src/: lib.rs
crates/desktop-bridge/: Cargo.toml
crates/desktop-bridge/src/: lib.rs  service.rs  ssh_config.rs  tunnel.rs
crates/embedded-ssh/: Cargo.toml
crates/executors/: Cargo.toml
crates/git/: Cargo.toml
crates/git-host/: Cargo.toml
crates/git/src/: cli.rs  (+1 more)
crates/local-deployment/: Cargo.toml  build.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs
crates/mcp/src/task_server/: handler.rs  mod.rs
crates/mcp/src/task_server/tools/: context.rs  issue_assignees.rs  issue_relationships.rs  issue_tags.rs  mod.rs  organizations.rs  remote_issues.rs  remote_projects.rs  repos.rs  sessions.rs  task_attempts.rs  workspaces.rs
crates/preview-proxy/: Cargo.toml
crates/preview-proxy/src/: api.rs  bippy_bundle.js  click_to_component_script.js  devtools_script.js  eruda_init.js  lib.rs  proxy_common.rs  ws_bridge.rs
crates/relay-client/: Cargo.toml
crates/relay-control/: Cargo.toml
crates/relay-hosts/: Cargo.toml
crates/relay-hosts/src/: lib.rs  tunnel_manager.rs  webrtc_cache.rs
crates/relay-protocol/: Cargo.toml
crates/relay-tunnel/: Cargo.toml  Dockerfile
crates/relay-tunnel-core/: Cargo.toml
crates/relay-tunnel/.sqlx/: query-13462773c343a0812783b914d7a09b6e7148d20be4c2a5c92fa5860e1bc5bd36.json  query-25045af6947be74c0a4f1784670904bd488d1cbafe997a2d8abef620d2e5497f.json  query-2b222c6a2bfc74535ad20d839e8f1aef3d1d64c2b0b96289f1703b08f2a48f68.json  query-2b81f9454b626be80c21761b0fd1e7a83b71bb53a4ababf212d4fb13636119ae.json  query-5ba9186639e75711df9218209ad88f91f54f9643ecf5f53af1e7bfc583727a7c.json  query-6aef9ee49b4bc1d9a23c0322e7733bee239e31380cb4cf8274cb60427b492299.json  query-6d64fbb63cd05c4cd9bcc3d07cbc26b165f0d0ffbc4df75391c6b205fe0abd78.json  query-7b010dece6caaeb04e8f033c869982b97f20c60903a92f4d45634f990ffbfce3.json  query-80dfc0d5bbc6db412ea0fda24a5184c3ce20064826779571cab1d9e32459c4cb.json  query-8b865d8fca4a3d7a8f7edf6671aed582164f93f973448143883d6d2fb461caf6.json  query-9c2e6a8fc112e4e2980e4dc3f1dae1ea7da376119b0f06aafbc74c7a471f17ad.json  query-d49f6664c24b472dec060502508fe09031dc896d0520cddd577a2156d923c5da.json  query-e84a068d6a2ad1458cf6f45c2f2dde8511355f29677cebfd15783fccd095a131.json  query-f31c0531cb5c099bc0c6b193852d3e3d0be6cfe1104dd792651d9c5434483ef0.json  query-f6d727f8d7baa7b92464ccccccd113fbe7c69a69d91dc6f54c6052eaa65ce868.json
crates/relay-tunnel/src/: client.rs  lib.rs  server.rs  ws_io.rs
crates/relay-tunnel/src/server_bin/: auth.rs  config.rs  mod.rs  relay_registry.rs  state.rs
crates/relay-tunnel/src/server_bin/db/: auth_sessions.rs  hosts.rs  identity_errors.rs  mod.rs  relay_auth_codes.rs  relay_browser_sessions.rs  users.rs
crates/relay-tunnel/src/server_bin/routes/: auth_code.rs  connect.rs  mod.rs  path_routes.rs
crates/relay-types/: Cargo.toml
crates/relay-webrtc/: Cargo.toml
crates/relay-ws/: Cargo.toml
crates/remote/: AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
crates/remote-info/: Cargo.toml
crates/review/: Cargo.toml
crates/server/: Cargo.toml  build.rs
crates/server-info/: Cargo.toml
crates/services/: Cargo.toml
crates/tauri-app/: Cargo.toml  Info.plist  build.rs  msi-template.wxs  tauri.conf.json
crates/trusted-key-auth/: Cargo.toml
crates/utils/: Cargo.toml
crates/workspace-manager/: Cargo.toml
crates/worktree-manager/: Cargo.toml
crates/ws-bridge/: Cargo.toml
crates/ws-bridge/src/: bridge.rs  lib.rs  ws_io.rs
docs/: docs.json  frontend-ui-library-refactor-audit.md  index.mdx
docs/configuration-customisation/: keyboard-shortcuts.mdx
docs/integrations/: vibe-kanban-mcp-server.mdx
docs/self-hosting/: deploy-docker.mdx  local-development.mdx
docs/workspaces/: changes.mdx  interface.mdx
frontend/: .eslintrc.cjs  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  routeTree.gen.ts
npx-cli/: README.md  package-lock.json  package.json  tsconfig.json
npx-cli/src/: cli.ts  desktop.ts  download.ts
patches/: @pierre__diffs@1.1.4.patch
remote-frontend/: package.json  vite.config.ts
remote-frontend/src/: AppRouter.tsx  routeTree.gen.ts
scripts/: build-bippy-bundle.mjs  build-tauri-msi.js  check-i18n.sh  check-legacy-frontend-paths.sh  check-unused-i18n-keys.mjs  dialog-import-rewrite-map.tsv  generate-desktop-manifest.js  generate-tauri-update-json.js  legacy-frontend-paths-allowlist.txt  migrate-remote-web-structure.mjs  refactor-web-shims.mjs
scripts/relay-test-client/: README.md  index.html
shared/: remote-types.ts  types.ts
shared/schemas/: claude_code.json  codex.json  cursor_agent.json
(+516 files in other folders)
