[package]
name = "deployment"
version = "0.1.36"
edition = "2024"

[dependencies]
db = { path = "../db" }
desktop-bridge = { path = "../desktop-bridge" }
utils = { path = "../utils" }
git = { path = "../git" }
services = { path = "../services" }
worktree-manager = { path = "../worktree-manager" }
executors = { path = "../executors" }
async-trait = { workspace = true } 
thiserror = { workspace = true } 
anyhow = { workspace = true }
relay-control = { path = "../relay-control" }
relay-hosts = { path = "../relay-hosts" }
trusted-key-auth = { path = "../trusted-key-auth" }
client-info = { path = "../client-info" }
remote-info = { path = "../remote-info" }
preview-proxy = { path = "../preview-proxy" }
tokio = { workspace = true }
sqlx = "0.8.6"
serde_json = { workspace = true }
git2 = { workspace = true }
futures = "0.3.31"
axum = { workspace = true }
