[package]
name = "desktop-bridge"
version = "0.1.36"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0"
base64 = "0.22"
dirs = "5"
ssh-key = { version = "0.6", features = ["ed25519"] }
relay-control = { path = "../relay-control" }
relay-ws = { path = "../relay-ws" }
relay-tunnel-core = { path = "../relay-tunnel-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
tokio-util = "0.7"
thiserror = "2.0"
tracing = "0.1"
ts-rs = { git = "https://github.com/xazukx/ts-rs.git", branch = "use-ts-enum", features = ["uuid-impl", "chrono-impl", "no-serde-warnings", "serde-json-impl"] }
uuid = { version = "1", features = ["serde", "v4"] }
