[package]
name = "preview-proxy"
version = "0.1.35"
edition = "2024"

[dependencies]
axum = { workspace = true }
anyhow = { workspace = true }
relay-tunnel-core = { path = "../relay-tunnel-core" }
reqwest = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = "0.26"
tracing = { workspace = true }
utils = { path = "../utils" }
uuid = { version = "1.0", features = ["serde", "v4"] }
