[package]
name = "relay-hosts"
version = "0.1.36"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
desktop-bridge = { path = "../desktop-bridge" }
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
http = "1"
relay-client = { path = "../relay-client" }
relay-ws = { path = "../relay-ws" }
relay-control = { path = "../relay-control" }
remote-info = { path = "../remote-info" }
relay-types = { path = "../relay-types" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
services = { path = "../services" }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
trusted-key-auth = { path = "../trusted-key-auth" }
url = "2.5"
utils = { path = "../utils" }
uuid = { version = "1.0", features = ["v4", "serde"] }
