[package]
name = "relay-tunnel"
version = "0.1.6"
edition = "2024"
publish = false

[[bin]]
name = "relay-server"
path = "src/bin/relay_server.rs"

[dependencies]
relay-tunnel-core = { path = "../relay-tunnel-core" }
api-types = { path = "../api-types" }
relay-types = { path = "../relay-types" }
anyhow = "1.0"
axum = { version = "0.8.4", features = ["macros", "multipart", "ws"] }
axum-extra = { version = "0.10.3", features = ["typed-header"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "std", "tls12"] }
secrecy = "0.10.3"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "tls-rustls-aws-lc-rs", "postgres", "uuid", "chrono", "macros"] }
thiserror = "2.0.12"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "request-id", "trace", "fs", "validate-request"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["serde", "v4"] }

[workspace]
